# NotAlterra-GUI

./: .gitattributes  .gitignore  AN_AGENTS_LAMENT.md  AUDIT.md  AppxManifest.xml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CODE_SIGNING_POLICY.md  CONTRIBUTING.md  Cargo.toml  DECISIONS.md  Directory.Build.props  GOVERNANCE.md  KNOWN_ISSUES.md  LICENSE.md  NotAlterra.cer  NotAlterra.wsb  PRIVACY.md  README.md  SECURITY.md  _check.py  _commit_msg.txt  _gen_cert.ps1  _gen_splash.py  _gen_wizard_imgs.py  _release.md  _search_save_type.py  _whale_preview.py  build.bat  build.rs  build.sh  check_table.py  check_token.ps1  notalterra  notalterra-linux  notalterra_cert.pfx  packaging.ps1  release_notes.txt  scan_props.py  (+4 more)
.cargo/: config.toml
.deepseek/state/: subagents.v1.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE_HANDOFF.md  AUDIT.md  BUG_REPORT_TEMPLATE.md  DECISIONS.md  GOVERNANCE.md  KNOWN_ISSUES.md  SIDEBAR.md  TESTING.md
examples/: dump_samples.rs
fuzz/: Cargo.toml  fuzz.ps1
fuzz/NotAlterra.Fuzz/: NotAlterra.Fuzz.csproj  Program.cs
fuzz/fuzz_targets/: backup_roundtrip.rs  full_metadata.rs  parse_gvas.rs
gvas-files/: MANIFEST  savegame_0.sav  savegame_0_1.bak  savegame_0_2.bak  savegame_0_3.bak  savegame_0_4.bak  savegame_0_6.bak  savegame_1.sav  savegame_1_1.bak  savegame_2.sav  savegame_3.sav  savegame_9.sav  savegame_corrupt_bool.sav  savegame_corrupt_magic.sav  savegame_corrupt_playtime.sav  savegame_corrupt_truncated.sav
gvas-files/_extracted/: MANIFEST  savegame_0_5.bak  savegame_0_7.bak  savegame_0_8.bak  savegame_0_9.bak  savegame_1.sav  savegame_1_1.bak  savegame_1_2.bak  savegame_1_3.bak  savegame_1_4.bak
legacy/config/Windows/: Engine.ini  GameUserSettings.ini  Input.ini
legacy/cpp-winui/: CMakeLists.txt  NotAlterra.vcxproj  Resources.rc  build.bat
legacy/cpp-winui/ui/: App.cpp  App.xaml  App.xaml.cpp  App.xaml.h  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h
legacy/cpp-winui/ui/Assets/: sonar_banner.json
legacy/misc/: build_log.txt
legacy/rust/: build.sh
legacy/rust/artifacts/parse_gvas/: crash-93544d5545a4eef5ade80e7b38de7825bd059721
legacy/rust/examples/: dump_samples.rs
legacy/rust/src/: config.rs
legacy/rust/tests/gvas/: dump_metadata.cpp  roundtrip_test.cpp
legacy/scripts/: bootstrap.ps1
resources/: app.rc
scripts/: _gen_splash.py  _gen_synthetic_saves.py  _sandbox_setup.ps1  setup.iss
skills/bafh-diary/: SKILL.md
skills/caveman/: SKILL.md
skills/ci-cd-pipeline/: SKILL.md
skills/diligence/: SKILL.md
skills/documentation/: SKILL.md
skills/privacy-security/: SKILL.md
skills/release-workflow/: SKILL.md
skills/session-protocol/: SKILL.md
skills/testing-fuzzing/: SKILL.md
skills/winui3/: SKILL.md
src/: config.rs  discovery.rs  guard.rs  gvas.rs  lib.rs  main.rs  main.rs.replace.py  ops.rs  tui.rs
src/NotAlterra.Avalonia/: App.axaml  App.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  NotAlterra.Avalonia.csproj  Program.cs
src/NotAlterra.Avalonia/Pages/: AboutPage.axaml  AboutPage.axaml.cs  HomePage.axaml  HomePage.axaml.cs  SaveSlotsPage.axaml  SaveSlotsPage.axaml.cs  SettingsPage.axaml  SettingsPage.axaml.cs
src/NotAlterra.Core/: NotAlterra.Core.csproj
src/NotAlterra.Core/Gvas/: BinaryReader.cs  Parser.cs  Types.cs
src/NotAlterra.Core/Services/: AppConfig.cs  Guard.cs  SaveOps.cs
src/NotAlterra.UI/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeSplash.cs  NotAlterra.UI.csproj  Package.appxmanifest  app.manifest
src/NotAlterra.UI.Tests/: AppConfigTests.cs  BinaryReaderTests.cs  FuzzProperties.cs  GuardTests.cs  GvasParserTests.cs  NotAlterra.UI.Tests.csproj  SaveOpsTests.cs  SlotUtilsTests.cs
src/NotAlterra.UI/Assets/: ass.cs.txt  caustic.cso  caustic.hlsl  caustic_overlay.cso  caustic_overlay.hlsl  caustic_shader.cso  caustic_shader.hlsl  warp.cso  warp.hlsl  xaml_with_sliders.xml
src/NotAlterra.UI/Gvas/: BinaryReader.cs  Parser.cs  Types.cs
src/NotAlterra.UI/Pages/: AboutPage.xaml  AboutPage.xaml.cs  BackupsPage.xaml  BackupsPage.xaml.cs  HomePage.xaml  HomePage.xaml.cs  IniConfigPage.xaml  IniConfigPage.xaml.cs  MetadataHoverCard.xaml  MetadataHoverCard.xaml.cs  SaveManagerPage.xaml  SaveManagerPage.xaml.cs  SaveSlotsPage.xaml  SaveSlotsPage.xaml.cs  SettingsPage.xaml  SettingsPage.xaml.cs
src/NotAlterra.UI/Properties/: launchSettings.json
src/NotAlterra.UI/Services/: AppConfig.cs  SaveDiscovery.cs  SaveOps.cs
src/gvas/: parser.cpp  parser.h  reader.h  types.h
src/ui/: App.cpp
tests/: _check.py  _scan_test.py  scan_props.py
tmp/: CheckPlaytime.cs  NotAlterra.UI.deps.json  NotAlterra.UI.runtimeconfig.json  check_playtime.py  check_types.py  entry.md  resources.pri
tmp_full/: NotAlterra.UI.deps.json  NotAlterra.UI.pri
tmp_full/Assets/: loop.webm
tmp_min/: NotAlterra.UI.deps.json  NotAlterra.UI.pri
