[package]
name = "notalterra"
version = "0.3.1"
edition = "2021"
authors = ["NotAlterra"]
license = "MIT"
description = "Subnautica 2 save-file manager — cross-platform terminal application"

[lib]
name = "notalterra"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
nom = "7"
chrono = "0.4"
dirs = "5"
regex = "1"
anyhow = "1"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1
