[package]
name = "notalterra"
version = "0.5.0-alpha"
edition = "2021"
authors = ["NotAlterra"]
license = "MIT"
description = "Subnautica 2 save-file manager — Windows native GUI"

[lib]
name = "notalterra"
path = "src/lib.rs"

[dependencies]
windows = { version = "0.62", features = [
    "Microsoft_UI_Xaml",
    "Microsoft_UI_Xaml_Controls",
    "Microsoft_UI_Xaml_Markup",
] }
nom = "7"
chrono = "0.4"
dirs = "5"
regex = "1"
anyhow = "1"
tar = "0.4.46"
flate2 = "1.1.9"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 2
lto = true
strip = true
codegen-units = 1
