[package]
name = "notalterra-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.notalterra]
path = ".."

[[bin]]
name = "parse_gvas"
path = "fuzz_targets/parse_gvas.rs"
test = false
doc = false
bench = false

[[bin]]
name = "full_metadata"
path = "fuzz_targets/full_metadata.rs"
test = false
doc = false
bench = false

[[bin]]
name = "backup_roundtrip"
path = "fuzz_targets/backup_roundtrip.rs"
test = false
doc = false
bench = false
